<resources>
    <string name="app_name">Hop Journal</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="settings_text">Settings</string>
    <string name="profile_text">Profile</string>
    <string name="recipes_text">My Recipes</string>
    <string name="ingredients_text">My Ingredients</string>
    <string name="ndopen">Open</string>
    <string name="ndclose">Close</string>
    <string name="username_hint">username</string>
    <string name="bday_hint">Birthday</string>
    <string name="location_hint">Location</string>
    <string name="update_btn">Update</string>
    <string name="post_text_hint">Add Caption</string>
    <string name="cancel_post">Cancel</string>
    <string name="login">Login</string>
    <string name="reset_pass">Forgot Password?</string>
    <string name="register_user">Register</string>
    <string name="mash_heading">Mash</string>
    <string name="add_mash">Add Ingredient</string>
    <string name="hop_heading">Hops</string>
    <string name="add_hop">Add Ingredient</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="update_pic">Update Profile Picture</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="submit">Submit</string>
    <string name="specify_weight">Specify Weight</string>
    <string name="specify_boil_time">Specify Boil Time</string>
    <string name="recipe_volume">Recipe Volume</string>
    <string name="recipe_type">Recipe Type</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="home">Home</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="location">Location</string>
</resources>
