<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_profile"
            android:title="@string/profile_text"
            android:icon="@drawable/profile_icon"/>
        <item
            android:id="@+id/menu_settings"
            android:title="@string/settings_text"
            android:icon="@drawable/settings_icon"/>
        <item
            android:id="@+id/menu_recipes"
            android:title="@string/recipes_text"
            android:icon="@drawable/list_icon"/>
        <item
            android:id="@+id/menu_ingredients"
            android:title="@string/ingredients_text"
            android:icon="@drawable/list_icon"/>
    </group>
</menu>