<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/login_username"
            android:hint="@string/username_hint"
            android:layout_gravity="center_horizontal"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/login_password"
            android:hint="@string/prompt_password"
            android:layout_gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/link_container"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/register"
                android:text="@string/register_user"
                android:layout_marginRight="50dp"
                android:textColor="@color/link"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_reset_passsword"
                android:text="@string/reset_pass"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/link"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_submit"
            android:text="@string/login"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>