<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RecipeCreatorActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/general_recipe_info"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recipe_name"
                android:hint="@string/recipe_name"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recipe_volume"
                android:hint="@string/recipe_volume"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recipe_type"
                android:hint="@string/recipe_type"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mash_heading"
            android:text="@string/mash_heading"
            android:textSize="24sp"
            android:textColor="@color/textGreen"
            android:textStyle="bold"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/general_recipe_info"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <View style="@style/Divider"
            app:layout_constraintTop_toBottomOf="@id/mash_heading"
            android:layout_marginHorizontal="5dp"
            android:id="@+id/mash_ul"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mash_recycler"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/mash_ul"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_mash"
            app:layout_constraintTop_toBottomOf="@id/mash_recycler"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/add_mash"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hop_heading"
            android:text="@string/hop_heading"
            android:textSize="24sp"
            android:textColor="@color/textGreen"
            android:textStyle="bold"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/add_mash"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <View style="@style/Divider"
            app:layout_constraintTop_toBottomOf="@id/hop_heading"
            android:layout_marginHorizontal="5dp"
            android:id="@+id/hop_ul"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hop_recycler"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/hop_ul"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_hop"
            app:layout_constraintTop_toBottomOf="@id/hop_recycler"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/add_hop"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
