<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewProfileActivity">
    <ImageView
        android:layout_width="@dimen/standard_400"
        android:layout_height="@dimen/standard_400"
        android:id="@+id/view_profile_pic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/default_profile_pic"
        android:layout_margin="5dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view_user_name_heading"
        android:text="@string/user_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_profile_pic"
        android:textColor="@color/textGreen"
        android:textSize="18sp"
        android:layout_margin="5dp"
        />
    <View
        style="@style/Divider"
        android:id="@+id/view_username_divider"
        app:layout_constraintTop_toBottomOf="@id/view_user_name_heading"
        android:layout_marginHorizontal="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view_user_name"
        app:layout_constraintTop_toBottomOf="@id/view_username_divider"
        android:text="UserName"
        android:layout_margin="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view_user_email_heading"
        android:text="@string/email"
        android:textSize="18dp"
        android:textColor="@color/textGreen"
        app:layout_constraintTop_toBottomOf="@id/view_user_name"
        android:layout_margin="5dp"
        />
    <View
        style="@style/Divider"
        android:id="@+id/view_email_divider"
        app:layout_constraintTop_toBottomOf="@id/view_user_email_heading"
        android:layout_marginHorizontal="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view_user_email"
        app:layout_constraintTop_toBottomOf="@id/view_email_divider"
        android:text="User's Email"
        android:layout_margin="5dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view_user_location_heading"
        android:text="@string/location"
        android:textSize="18dp"
        android:textColor="@color/textGreen"
        app:layout_constraintTop_toBottomOf="@id/view_user_email"
        android:layout_margin="5dp"
        />
    <View
        style="@style/Divider"
        android:id="@+id/view_location_divider"
        app:layout_constraintTop_toBottomOf="@id/view_user_location_heading"
        android:layout_marginHorizontal="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view_user_location"
        app:layout_constraintTop_toBottomOf="@id/view_location_divider"
        android:text="User's Location"
        android:layout_margin="5dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>